--- a/webapp/webapp/templates/common/layout.jinja2
+++ b/webapp/webapp/templates/common/layout.jinja2
@@ -8,10 +8,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>BrisBert | An old guys with a big mouth</title>
+    <title>BrisBert | Learning about Brisbane, back in my day.</title>
 
-  <meta name="description" content="">
-  <meta name="author" content="Luke Brooker">
+  <meta name="description" content="When you want to learn more about the history of Brisbane, until you can't stand hearing about it anymore.">
+  <meta name="author" content="Olf Folks United">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0">
   <meta http-equiv="cleartype" content="on">
 
@@ -19,9 +19,8 @@
   <!-- TODO: Add prefetches -->
 
   <!-- TODO: Insert logo link -->
-  <link rel="logo" type="image/svg" href=""/>
+  <link rel="logo" type="image/svg" href="/assets/img/logo.svg"/>
 
-  <!-- TODO: Place favicon.ico and apple-touch-icon.png in the root directory -->
 
   <!--[if lt IE 8]>
     <link rel="stylesheet" href="css/style-old-ie.css">
@@ -39,6 +38,45 @@
   <!-- TODO: Replace with minified url -->
   <script src="/assets/js/script.js"></script>
   {% include 'common/bert_js.jinja2' %}
+
+  <!-- Icons -->
+
+  <!-- 16x16 -->
+  <link rel="shortcut icon" href="/assets/img/icons/favicon.ico">
+  <!-- 32x32 -->
+  <link rel="shortcut icon" href="/assets/img/icons/favicon.png">
+  <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
+  <link rel="apple-touch-icon-precomposed" href="/assets/img/icons/apple-touch-icon-precomposed.png">
+  <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/icons/apple-touch-icon-72x72-precomposed.png">
+  <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/icons/apple-touch-icon-114x114-precomposed.png">
+  <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/icons/apple-touch-icon-144x144-precomposed.png">
+
+  <!--iOS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-title" content="BrisBert">
+  <meta name="viewport" content="initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <!-- Startup images -->
+
+  <!-- iPhone 3GS, pre-2011 iPod Touch -->
+  <link rel="apple-touch-startup-image" href="/assets/img/icons/startup/startup-320x460.png" media="screen and (max-device-width:320px)">
+  <!-- iPhone 4, 4S and 2011 iPod Touch-->
+  <link rel="apple-touch-startup-image" href="/assets/img/icons/startup/startup-640x920.png" media="(max-device-width:480px) and (-webkit-min-device-pixel-ratio:2)">
+  <!-- iPhone 5 and 2012 iPod Touch -->
+  <link rel="apple-touch-startup-image" href="/assets/img/icons/startup/startup-640x1096.png" media="(max-device-width:548px) and (-webkit-min-device-pixel-ratio:2)">
+  <!-- iPad landscape -->
+  <link rel="apple-touch-startup-image" sizes="1024x748" href="/assets/img/icons/startup/startup-1024x748.png" media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape)">
+  <!-- iPad Portrait -->
+  <link rel="apple-touch-startup-image" sizes="768x1004" href="/assets/img/icons/startup/startup-768x1004.png" media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)">
+
+  <!-- Windows 8 / RT -->
+  <meta name="msapplication-TileImage" content="/assets/img/icons/apple-touch-icon-144x144-precomposed.png">
+  <meta name="msapplication-TileColor" content="#000">
 
 </head>
 
@@ -67,14 +105,14 @@
     <div class="l__wrapper emphasis--more-small">
     <header role="banner" class="header">
 
-        <!-- <a href="#off-canvas--left" class="off-canvas__toggle--left  l--float-left">Menu</a> -->
-        <a href="/" class="l--float-left">
-          <div class="header__logo"><img src="/assets/img/logo.svg" alt="BrisBert"></div>
-        </a>
+      <!-- <a href="#off-canvas--left" class="off-canvas__toggle--left  l--float-left">Menu</a> -->
+      <a href="/" class="l--float-left">
+        <div class="header__logo"><img src="/assets/img/logo.svg" alt="BrisBert"></div>
+      </a>
 
-        <div class="header__tagline w--one-third">
-          <p>Learning about Brisbane,<br>back in <a href="/about">my</a> day.</p>
-        </div>
+      <div class="header__tagline w--one-third">
+        <p>Learning about Brisbane,<br>back in <a href="/about">my</a> day.</p>
+      </div>
 
     </header>
     </div>
